<resources>
    <string name="app_name">Data Viewer</string>
    <string name="SQL_Settings">SQL Settings</string>
    <string name="Login">Login</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="ip">IP Address:</string>
    <string name="SQL_server">DB Name:</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="save">Save</string>

    <string name="Return">Return</string>
    <string name="Product_List">Product List</string>
</resources>
